tests/NameTests/data/UndeclaredPrefixTest.xpl
node[] main() {
  element e;

  e/p:test;
}
